[project]
name = "dynamic-pricing-env"
version = "0.1.0"
description = "Dynamic pricing OpenEnv environment"
authors = [{name = "Ishan,Garima"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"